--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Wari</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="shortcut icon" href="./assets/wari_page_icon.png"> 
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans+Condensed:wght@400;500;600&family=Fira+Sans:wght@300;400;500;700&display=swap" rel="stylesheet">
