--- a/pages/Wari/index.html
+++ b/pages/Wari/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>Wari</title>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./style.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Acme&family=Fira+Sans+Condensed:wght@400;500;600;700&family=Inconsolata:wght@400;500;600;700;800;900&family=Noto+Sans+JP:wght@300;400;500;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Acme&family=Inconsolata:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
