--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
       <img  src="./assets/Banner.jpeg" alt="Wari">
        <nav class="menu">
          <a href="#">HOME</a>
-         <a href="/pages/Wari">A WARI</a>
-         <a href="/pages/Solucoes">SOLUÇÕES</a>
-         <a href="/pages/Produtos">O PRODUTO</a>
-         <a href="/pages/Depoimentos">CLIENTES</a>
-         <a href="/pages/Contato">CONTATO</a>
+         <a href="/pages/Empresa.html">A WARI</a>
+         <a href="/pages/Solucoes.html">SOLUÇÕES</a>
+         <a href="/pages/Produtos.html">O PRODUTO</a>
+         <a href="/pages/Depoimentos.html">CLIENTES</a>
+         <a href="/pages/Contato.html">CONTATO</a>
        </nav>
     </header>
     <div class="conteudo">
