--- a/pages/Contato.html
+++ b/pages/Contato.html
@@ -16,11 +16,11 @@
   <header class="cabecalho">
     <nav class="menu">
       <img class="logoMenu" src="../../assets/wari_Logo.png" alt="">
-      <a href="../..//index.html">HOME</a>
-      <a href="../Wari">A WARI</a>
-      <a href="../Solucoes">SOLUÇÕES</a>
-      <a href="../Produtos">O PRODUTO</a>
-      <a href="../Depoimentos">CLIENTES</a>
+      <a href="../index.html">HOME</a>
+      <a href="../pages/Empresa.html">A WARI</a>
+      <a href="../pages/Solucoes.html">SOLUÇÕES</a>
+      <a href="../pages/Produtos.html">O PRODUTO</a>
+      <a href="../pages/Depoimentos.html">CLIENTES</a>
       <a href="#">CONTATO</a>
       <a class="facebookIcon" href="#"><img src="../../assets/Produtos/facebook_icon.png" alt=""></a>
       <a class="instaIcon" href="#"><img src="../../assets/Produtos/insta_icon.png" alt=""></a>
