--- a/pages/Depoimentos.html
+++ b/pages/Depoimentos.html
@@ -18,12 +18,12 @@
     <img class="banner" src="../../assets/party_wallpaper.png" alt="">
     <nav class="menu">
       <img class="logoMenu" src="../../assets/wari_Logo.png" alt="">
-      <a href="../../index.html">HOME</a>
-      <a href="../Wari">A WARI</a>
-      <a href="../Solucoes">SOLUÇÕES</a>
-      <a href="../Produtos">O PRODUTO</a>
+      <a href="../index.html">HOME</a>
+      <a href="../pages/Empresa.html">A WARI</a>
+      <a href="../pages/Solucoes.html">SOLUÇÕES</a>
+      <a href="../pages/Produtos.html">O PRODUTO</a>
       <a href="#">CLIENTES</a>
-      <a href="../Contato">CONTATO</a>
+      <a href="../pages/Contato.html">CONTATO</a>
       <a class="facebookIcon" href="#"><img src="../../assets/Produtos/facebook_icon.png" alt=""></a>
       <a class="instaIcon" href="#"><img src="../../assets/Produtos/insta_icon.png" alt=""></a>
     </nav>
