--- a/pages/Empresa.html
+++ b/pages/Empresa.html
@@ -3,7 +3,7 @@
 <head>
   <title>Wari</title>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="../assets/CSS/Depoimentos.css">
+  <link rel="stylesheet" href="../assets/CSS/Empresa.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Acme&family=Fira+Sans+Condensed:wght@400;500;600;700&family=Inconsolata:wght@400;500;600;700;800;900&family=Noto+Sans+JP:wght@300;400;500;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Acme&family=Inconsolata:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
@@ -14,15 +14,15 @@
 <body>
   <header class="cabecalho">
     <nav class="menu">
-      <img class="logoMenu" src="../../assets/wari_Logo.png" alt="">
-      <a href="../..//index.html">HOME</a>
+      <img class="logoMenu" src="../assets/wari_Logo.png" alt="">
+      <a href="../index.html">HOME</a>
       <a href="#">A WARI</a>
-      <a href="#">SOLUÇÕES</a>
-      <a href="../Produtos">O PRODUTO</a>
-      <a href="../Depoimentos">CLIENTES</a>
-      <a href="../Contato">CONTATO</a>
-      <a class="facebookIcon" href="#"><img src="../../assets/Produtos/facebook_icon.png" alt=""></a>
-      <a class="instaIcon" href="#"><img src="../../assets/Produtos/insta_icon.png" alt=""></a>
+      <a href="../pages/Solucoes.html">SOLUÇÕES</a>
+      <a href="../pages/Produtos.html">O PRODUTO</a>
+      <a href="../pages/Depoimentos.html">CLIENTES</a>
+      <a href="../pages/Contato.html">CONTATO</a>
+      <a class="facebookIcon" href="#"><img src="../assets/Produtos/facebook_icon.png" alt=""></a>
+      <a class="instaIcon" href="#"><img src="../assets/Produtos/insta_icon.png" alt=""></a>
     </nav>
    </header>
    <div class="apresentacao">
@@ -33,7 +33,7 @@
    </div>
    <div class="oQueFazemos">
      <p class="titulo">O QUE <span>FAZEMOS</span>?</p>
-     <img class="icon" src="../../assets/wari_icon.png" alt="">
+     <img class="icon" src="../assets/wari_icon.png" alt="">
      <p class="textoPequeno">
        Na <span>Wari</span>, ajudamos empresas de entretenimento a acompanhar as <span>mudanças</span> tecnológicas.
      </p>
@@ -43,7 +43,7 @@
    </div>
    <div class="quemSomos">
     <p class="titulo"> <span>QUEM </span> SOMOS?</p>
-    <img class="icon" src="../../assets/wari_icon.png" alt="">
+    <img class="icon" src="../assets/wari_icon.png" alt="">
     <p class="textoPequeno">
       Nos anos 1000 D.C. existia uma tribo indígena latino-americana chamada wari. Essa tribo era extremamente desenvolvida
       e cultivava muitas festas e rituais. Até que, misteriosamente, após uma grande celebração, a tribo se dissipou e seus
@@ -64,12 +64,12 @@
    </div>
    <div class="premios">
     <p class="titulo"> PRÊMIOS</p>
-    <img class="icon" src="../../assets/wari_icon.png" alt="">
+    <img class="icon" src="../assets/wari_icon.png" alt="">
    </div>
    <div class="orcamento">
     <div class="textoConteudo">
       <p class="titulo">FAÇA <span> SEU</span> ORÇAMENTO</p>
-      <img class="icon" src="../../assets/wari_icon.png" alt="">
+      <img class="icon" src="../assets/wari_icon.png" alt="">
     </div>
     <form action="">
       <input type="text" placeholder="Qual seu nome?">
@@ -82,7 +82,7 @@
     </form>
   </div>
   <div class="sobre">
-    <img class="logo" src="../../assets/wari_Logo.png" alt="logo">
+    <img class="logo" src="../assets/wari_Logo.png" alt="logo">
     <div class="textoSobre">
       <p>Home</p>
       <p>A wari</p>
@@ -96,8 +96,8 @@
       <p>Loja 112 (Segundo Andar) - São Pedro, Juiz de Fora/MG</p>
       <p>+55 (32) 3015-9727</p>
       <p><strong>Junte-se a nós</strong></p>
-      <a href="#"><img class="mediaIcon" src="../../assets/facebook_icon.png" alt="Facebook"></a>
-      <a href="#"><img class="mediaIcon" src="../../assets/instagram_icon.png" alt="Instagram"></a>
+      <a href="#"><img class="mediaIcon" src="../assets/facebook_icon.png" alt="Facebook"></a>
+      <a href="#"><img class="mediaIcon" src="../assets/instagram_icon.png" alt="Instagram"></a>
     </div>
   </div>
 </div>
