--- a/pages/Produtos.html
+++ b/pages/Produtos.html
@@ -15,36 +15,36 @@
 <body>
   <header class="cabecalho">
      <nav class="menu">
-       <img class="logoMenu" src="../../assets/wari_Logo.png" alt="">
-       <a href="../../index.html">HOME</a>
-       <a href="../Wari">A WARI</a>
-       <a href="../Solucoes">SOLUÇÕES</a>
+       <img class="logoMenu" src="../assets/wari_Logo.png" alt="">
+       <a href="../index.html">HOME</a>
+       <a href="../pages/Empresa.html">A WARI</a>
+       <a href="../pages/Solucoes.html">SOLUÇÕES</a>
        <a href="#">O PRODUTO</a>
-       <a href="../Depoimentos">CLIENTES</a>
-       <a href="../Contato">CONTATO</a>
-       <a class="facebookIcon" href="#"><img src="../../assets/Produtos/facebook_icon.png" alt=""></a>
-       <a class="instaIcon" href="#"><img src="../../assets/Produtos/insta_icon.png" alt=""></a>
+       <a href="../pages/Depoimentos.html">CLIENTES</a>
+       <a href="../pages/Contato.html">CONTATO</a>
+       <a class="facebookIcon" href="#"><img src="../assets/Produtos/facebook_icon.png" alt=""></a>
+       <a class="instaIcon" href="#"><img src="../assets/Produtos/insta_icon.png" alt=""></a>
      </nav>
     </header>
     <div class="conteudo">
       <div class="textoProduto">
         <p class="tituloProduto"><span>O</span> PRODUTO</p>
-        <img class="icon" src="../../assets/wari_icon.png" alt="">
+        <img class="icon" src="../assets/wari_icon.png" alt="">
         <p class="textoPequeno">Na <span>Wari</span>, ajudamos empresa de etretenimento a acompanhar as <span>mudanças</span> tecnológicos.</p>
         <p class="textoPequeno">E o melhor, <Span>otimizando</Span> lucros.</p>
       </div>
       <div class="vantagens">
-        <img src="../../assets/Produtos/bonito.png" alt="Bonito">
-        <img src="../../assets/Produtos/inteligente.png" alt="Inteligente">
-        <img src="../../assets/Produtos/surpreende.png" alt="Surpreendente">
-        <img src="../../assets/Produtos/lucrativo.png" alt="Lucrativo">
+        <img src="../assets/Produtos/bonito.png" alt="Bonito">
+        <img src="../assets/Produtos/inteligente.png" alt="Inteligente">
+        <img src="../assets/Produtos/surpreende.png" alt="Surpreendente">
+        <img src="../assets/Produtos/lucrativo.png" alt="Lucrativo">
       </div>
       <div class="apresentacao">
           <div class="leitores">
-            <img class="imagemLeitores" src="../../assets/Pulseira_Inteligente.jpg" alt="Pulseira inteligente">
+            <img class="imagemLeitores" src="../assets/Pulseira_Inteligente.jpg" alt="Pulseira inteligente">
             <div class="textoLeitores">
               <p class="titulo"><span>OS </span> LEITORES</p>
-              <img class="icon" src="../../assets/wari_icon.png" alt="">
+              <img class="icon" src="../assets/wari_icon.png" alt="">
               <p class="textoPequeno"><span>>></span> Interagem com as pulseiras inteligentes, afim de facilitar o consumo de mercadorias e a interação do
                participante com o sistema Wari, diminuindo filas
               </p>
@@ -53,10 +53,10 @@
       </div>
       <div class="apresentacao">
         <div class="totens">
-          <img class="imagemTotens" src="../../assets/Totens.jpg" alt="Totens">
+          <img class="imagemTotens" src="../assets/Totens.jpg" alt="Totens">
           <div class="textoTotens">
             <p class="titulo"><span>OS </span> TOTENS</p>
-            <img class="icon" src="../../assets/wari_icon.png" alt="">
+            <img class="icon" src="../assets/wari_icon.png" alt="">
             <p class="textoPequeno"><span>>></span> Dispositivos que permitem a consulta do saldo do participante de forma rápida e descomplicada,
               tanto para o sistema pré-pago quanto para o pós-pago.
             </p>
@@ -65,10 +65,10 @@
       </div>
       <div class="apresentacao">
         <div class="nossoSistema">
-          <img class="imagemSistema" src="../../assets/Produtos/SistemaWari.jpg" alt="Sistema Wari">
+          <img class="imagemSistema" src="../assets/Produtos/SistemaWari.jpg" alt="Sistema Wari">
           <div class="textoSistema">
             <p class="titulo"><span>NOSSO </span> SISTEMA</p>
-            <img class="icon" src="../../assets/wari_icon.png" alt="">
+            <img class="icon" src="../assets/wari_icon.png" alt="">
             <p class="textoPequeno"><span>>></span> Torna o gerenciamento de eventos mais fácil, a partir de uma interface intuitiva e do controle
               total do seu evento de qualquer lugar do mundo.
             </p>
@@ -80,7 +80,7 @@
     <div class="orcamento">
       <div class="textoConteudo">
         <p class="titulo">FAÇA <span> SEU</span> ORÇAMENTO</p>
-        <img class="icon" src="../../assets/wari_icon.png" alt="">
+        <img class="icon" src="../assets/wari_icon.png" alt="">
       </div>
       <form action="">
         <input type="text" placeholder="Qual seu nome?">
@@ -93,7 +93,7 @@
       </form>
     </div>
     <div class="sobre">
-      <img class="logo" src="../../assets/wari_Logo.png" alt="logo">
+      <img class="logo" src="../assets/wari_Logo.png" alt="logo">
       <div class="textoSobre">
         <p>Home</p>
         <p>A wari</p>
@@ -107,8 +107,8 @@
         <p>Loja 112 (Segundo Andar) - São Pedro, Juiz de Fora/MG</p>
         <p>+55 (32) 3015-9727</p>
         <p><strong>Junte-se a nós</strong></p>
-        <a href="#"><img class="mediaIcon" src="../../assets/facebook_icon.png" alt="Facebook"></a>
-        <a href="#"><img class="mediaIcon" src="../../assets/instagram_icon.png" alt="Instagram"></a>
+        <a href="#"><img class="mediaIcon" src="../assets/facebook_icon.png" alt="Facebook"></a>
+        <a href="#"><img class="mediaIcon" src="../assets/instagram_icon.png" alt="Instagram"></a>
       </div>
     </div>
   </div>
