--- a/pages/Solucoes.html
+++ b/pages/Solucoes.html
@@ -4,7 +4,7 @@
   <head>
     <title>Wari</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="../assets/CSS/Produtos.css">
+    <link rel="stylesheet" href="../assets/CSS/Solucoes.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Acme&family=Fira+Sans+Condensed:wght@400;500;600;700&family=Inconsolata:wght@400;500;600;700;800;900&family=Noto+Sans+JP:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Acme&family=Inconsolata:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
@@ -16,36 +16,36 @@
 <body>
   <header class="cabecalho">
      <nav class="menu">
-       <img class="logoMenu" src="../../assets/wari_Logo.png" alt="">
-       <a href="../../index.html">HOME</a>
-       <a href="../Wari">A WARI</a>
+       <img class="logoMenu" src="../assets/wari_Logo.png" alt="">
+       <a href="../index.html">HOME</a>
+       <a href="../pages/Empresa.html">A WARI</a>
        <a href="#">SOLUÇÕES</a>
-       <a href="../Produtos">O PRODUTO</a>
-       <a href="../Depoimentos">CLIENTES</a>
-       <a href="../Contato">CONTATO</a>
-       <a class="facebookIcon" href="#"><img src="../../assets/Produtos/facebook_icon.png" alt=""></a>
-       <a class="instaIcon" href="#"><img src="../../assets/Produtos/insta_icon.png" alt=""></a>
+       <a href="../pages/Produtos.html">O PRODUTO</a>
+       <a href="../pages/Depoimentos.html">CLIENTES</a>
+       <a href="../pages/Contato.html">CONTATO</a>
+       <a class="facebookIcon" href="#"><img src="../assets/Produtos/facebook_icon.png" alt=""></a>
+       <a class="instaIcon" href="#"><img src="../assets/Produtos/insta_icon.png" alt=""></a>
      </nav>
     </header>
     <div class="conteudo">
       <div class="textoProduto">
         <p class="tituloProduto">SOLUÇÕES</p>
-        <img class="icon" src="../../assets/wari_icon.png" alt="">
+        <img class="icon" src="../assets/wari_icon.png" alt="">
         <p class="textoPequeno">Na <span>Wari</span>, ajudamos empresa de etretenimento a acompanhar as <span>mudanças</span> tecnológicos.</p>
         <p class="textoPequeno">E o melhor, <Span>otimizando</Span> lucros.</p>
       </div>
       <div class="vantagens">
-        <img src="../../assets/Produtos/bonito.png" alt="Bonito">
-        <img src="../../assets/Produtos/inteligente.png" alt="Inteligente">
-        <img src="../../assets/Produtos/surpreende.png" alt="Surpreendente">
-        <img src="../../assets/Produtos/lucrativo.png" alt="Lucrativo">
+        <img src="../assets/Produtos/bonito.png" alt="Bonito">
+        <img src="../assets/Produtos/inteligente.png" alt="Inteligente">
+        <img src="../assets/Produtos/surpreende.png" alt="Surpreendente">
+        <img src="../assets/Produtos/lucrativo.png" alt="Lucrativo">
       </div>
       <div class="apresentacao">
           <div class="controleEntrada">
-            <img class="imagemControleEntrada" src="../../assets/Pulseira_Inteligente.jpg" alt="Pulseira inteligente">
+            <img class="imagemControleEntrada" src="../assets/Pulseira_Inteligente.jpg" alt="Pulseira inteligente">
             <div class="textoControleEntrada">
               <p class="titulo"><span>CONTROLE DE </span> ENTRADA</p>
-              <img class="icon" src="../../assets/wari_icon.png" alt="">
+              <img class="icon" src="../assets/wari_icon.png" alt="">
               <p class="textoPequeno"><span>>></span> Interagem com as pulseiras inteligentes, afim de facilitar o consumo de mercadorias e a interação do
                participante com o sistema Wari, diminuindo filas
               </p>
@@ -54,10 +54,10 @@
       </div>
       <div class="apresentacao">
         <div class="controleConsumo">
-          <img class="imagemControleConsumo" src="../../assets/Totens.jpg" alt="Totens">
+          <img class="imagemControleConsumo" src="../assets/Totens.jpg" alt="Totens">
           <div class="textoControleConsumo">
             <p class="titulo"><span>CONTROLE DE </span> CONSUMO</p>
-            <img class="icon" src="../../assets/wari_icon.png" alt="">
+            <img class="icon" src="../assets/wari_icon.png" alt="">
             <p class="textoPequeno"><span>>></span> Dispositivos que permitem a consulta do saldo do participante de forma rápida e descomplicada,
               tanto para o sistema pré-pago quanto para o pós-pago.
             </p>
@@ -66,10 +66,10 @@
       </div>
       <div class="apresentacao">
         <div class="nossoSistema">
-          <img class="imagemSistema" src="../../assets/Produtos/SistemaWari.jpg" alt="Sistema Wari">
+          <img class="imagemSistema" src="../assets/Produtos/SistemaWari.jpg" alt="Sistema Wari">
           <div class="textoSistema">
             <p class="titulo"><span>NOSSO </span> SISTEMA</p>
-            <img class="icon" src="../../assets/wari_icon.png" alt="">
+            <img class="icon" src="../assets/wari_icon.png" alt="">
             <p class="textoPequeno"><span>>></span> Torna o gerenciamento de eventos mais fácil, a partir de uma interface intuitiva e do controle
               total do seu evento de qualquer lugar do mundo.
             </p>
