--- a/pages/Produtos.html
+++ b/pages/Produtos.html
@@ -14,6 +14,7 @@
 </head>
 <body>
   <header class="cabecalho">
+     <img class="banner" src="../assets/party_wallpaper.png" alt="">
      <nav class="menu">
        <img class="logoMenu" src="../assets/wari_Logo.png" alt="">
        <a href="../index.html">HOME</a>
