--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <link rel="shortcut icon" href="./assets/wari_page_icon.png"> 
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans+Condensed:wght@400;500;600&family=Fira+Sans:wght@300;400;500;700&display=swap" rel="stylesheet">
   </head>
+  <script>
+      function onFormSubmit() {
+          var toAddress = "lucasrmts2@gmail.com";
+          var subject = "New answer";
+          var emailBody = "Sao Paulo, bnla bla de blablabla" + "\n\n" +
+                          "A resposta é: RESPOSTA" + "\n\n";
+          MailApp.sendEmail(toAddress, subject, emailBody);
+      }
+
+  </script>
   <body>
     <header class="cabecalho">
       <img  src="./assets/Banner.jpeg" alt="Wari">
@@ -54,7 +64,7 @@
             <input type="text" placeholder="Qual seu cargo?">
             <input type="text" placeholder="Qual a capacidade da empresa?">
             <input type="tel" placeholder="Qual seu telefone?">
-            <button>Solicitar orçamento</button>
+            <button onclick= "onFormSubmit()">Solicitar orçamento </button>
           </form>
         </div>
         <div class="sobre">
