--- a/pages/Depoimentos.html
+++ b/pages/Depoimentos.html
@@ -9,30 +9,30 @@
     <link href="https://fonts.googleapis.com/css2?family=Acme&family=Fira+Sans+Condensed:wght@400;500;600;700&family=Inconsolata:wght@400;500;600;700;800;900&family=Noto+Sans+JP:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Acme&family=Inconsolata:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="../../assets/wari_page_icon.png"> 
+    <link rel="shortcut icon" href="../assets/wari_page_icon.png"> 
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans+Condensed:wght@400;500;600&family=Fira+Sans:wght@300;400;500;700&display=swap" rel="stylesheet">
   </head>
 </head>
 <body>
   <header class="cabecalho">
-    <img class="banner" src="../../assets/party_wallpaper.png" alt="">
+    <img class="banner" src="../assets/party_wallpaper.png" alt="">
     <nav class="menu">
-      <img class="logoMenu" src="../../assets/wari_Logo.png" alt="">
+      <img class="logoMenu" src="../assets/wari_Logo.png" alt="">
       <a href="../index.html">HOME</a>
       <a href="../pages/Empresa.html">A WARI</a>
       <a href="../pages/Solucoes.html">SOLUÇÕES</a>
       <a href="../pages/Produtos.html">O PRODUTO</a>
       <a href="#">CLIENTES</a>
       <a href="../pages/Contato.html">CONTATO</a>
-      <a class="facebookIcon" href="#"><img src="../../assets/Produtos/facebook_icon.png" alt=""></a>
-      <a class="instaIcon" href="#"><img src="../../assets/Produtos/insta_icon.png" alt=""></a>
+      <a class="facebookIcon" href="#"><img src="../assets/Produtos/facebook_icon.png" alt=""></a>
+      <a class="instaIcon" href="#"><img src="../assets/Produtos/insta_icon.png" alt=""></a>
     </nav>
    </header>
    <div class="depoimentos">
     <p class="titulo"><span>DEPOIMENTOS</span></p>
-    <img class="icon" src="../../assets/wari_icon.png" alt="">
+    <img class="icon" src="../assets/wari_icon.png" alt="">
     <div class="depoimento">
-      <img src="../../assets/Clientes/jonas.png" alt="Jonas">
+      <img src="../assets/Clientes/jonas.png" alt="Jonas">
       <div class="texto">
         <p class="textoCliente">"A gente está implementando um novo sistema, que é uma pulseira chipada que tem todas as informações do cliente,
            o cliente pode conferir o seu saldo, a casa está equipada com totens de leitura da pulseira, que a pessoa pode verificar seu crédito
@@ -42,7 +42,7 @@
       </div>
     </div>
     <div class="depoimento">
-      <img src="../../assets/Clientes/paula miranda.png" alt="Paula Miranda">
+      <img src="../assets/Clientes/paula miranda.png" alt="Paula Miranda">
       <div class="texto">
         <p class="textoCliente">"Tudo que é novo e traz benefícios para casas noturnas, em conjunto com
            o avanço da tecnologia, é sempre super bem-vindo. Uma das coisas que eu enxergo além, é que 
@@ -52,7 +52,7 @@
       </div>
     </div>
     <div class="depoimento">
-      <img src="../../assets/Clientes/lincoln.png" alt="Lincoln">
+      <img src="../assets/Clientes/lincoln.png" alt="Lincoln">
       <div class="texto">
         <p class="textoCliente">"Muito legal a tecnologia, estamos no mercado para inovar, vamos nos
            erguer como líder de mercado a partir de inovação e tecnologia"
@@ -61,7 +61,7 @@
       </div>
     </div>
     <div class="depoimento">
-      <img src="../../assets/Clientes/mari.png" alt="Mari Pena">
+      <img src="../assets/Clientes/mari.png" alt="Mari Pena">
       <div class="texto">
         <p class="textoCliente">"Mega tecnológica, esse esquema da pulseirinha funciona muito, acho que
            a gente poupa tempo e também é muito mais fácil, então estou adorando!"
@@ -70,7 +70,7 @@
       </div>
     </div>
     <div class="depoimento">
-      <img src="../../assets/Clientes/gringa.png" alt="Gringa">
+      <img src="../assets/Clientes/gringa.png" alt="Gringa">
       <div class="texto">
         <p class="textoCliente">"Eu amei isso, eu queria que nós tivéssemos isso nos Estados Unidos"
         </p>
@@ -81,7 +81,7 @@
    <div class="orcamento">
     <div class="textoConteudo">
       <p class="titulo">FAÇA <span> SEU</span> ORÇAMENTO</p>
-      <img class="icon" src="../../assets/wari_icon.png" alt="">
+      <img class="icon" src="../assets/wari_icon.png" alt="">
     </div>
     <form action="">
       <input type="text" placeholder="Qual seu nome?">
@@ -94,7 +94,7 @@
     </form>
   </div>
   <div class="sobre">
-    <img class="logo" src="../../assets/wari_Logo.png" alt="logo">
+    <img class="logo" src="../assets/wari_Logo.png" alt="logo">
     <div class="textoSobre">
       <p>Home</p>
       <p>A wari</p>
@@ -108,8 +108,8 @@
       <p>Loja 112 (Segundo Andar) - São Pedro, Juiz de Fora/MG</p>
       <p>+55 (32) 3015-9727</p>
       <p><strong>Junte-se a nós</strong></p>
-      <a href="#"><img class="mediaIcon" src="../../assets/facebook_icon.png" alt="Facebook"></a>
-      <a href="#"><img class="mediaIcon" src="../../assets/instagram_icon.png" alt="Instagram"></a>
+      <a href="#"><img class="mediaIcon" src="../assets/facebook_icon.png" alt="Facebook"></a>
+      <a href="#"><img class="mediaIcon" src="../assets/instagram_icon.png" alt="Instagram"></a>
     </div>
   </div>
   <footer>
