--- a/pages/Solucoes.html
+++ b/pages/Solucoes.html
@@ -95,7 +95,7 @@
       </form>
     </div>
     <div class="sobre">
-      <img class="logo" src="../../assets/wari_Logo.png" alt="logo">
+      <img class="logo" src="../assets/wari_Logo.png" alt="logo">
       <div class="textoSobre">
         <p>Home</p>
         <p>A wari</p>
@@ -109,8 +109,8 @@
         <p>Loja 112 (Segundo Andar) - São Pedro, Juiz de Fora/MG</p>
         <p>+55 (32) 3015-9727</p>
         <p><strong>Junte-se a nós</strong></p>
-        <a href="#"><img class="mediaIcon" src="../../assets/facebook_icon.png" alt="Facebook"></a>
-        <a href="#"><img class="mediaIcon" src="../../assets/instagram_icon.png" alt="Instagram"></a>
+        <a href="#"><img class="mediaIcon" src="../assets/facebook_icon.png" alt="Facebook"></a>
+        <a href="#"><img class="mediaIcon" src="../assets/instagram_icon.png" alt="Instagram"></a>
       </div>
     </div>
   </div>
