--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="./style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="shortcut icon" href="./assets/wari_page_icon.png"> 
+    <link rel="shortcut icon" href="/Site Wari/assets/wari_page_icon.png"> 
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans+Condensed:wght@400;500;600&family=Fira+Sans:wght@300;400;500;700&display=swap" rel="stylesheet">
   </head>
   <script>
@@ -39,8 +39,8 @@
           <div class="rotateImage"><img src="./assets/Totens.jpg" alt="Totens"></div>
           <div class="rotateImage"><img src="./assets/Pulseira_Inteligente.jpg" alt="Pulseira inteligente"></div>
           <div class="rotateImage"><img src="./assets/Leitores_para_smartphones.jpg" alt="Leitores para smartphones"></div>
-          <div class="rotateImage"></div>
-          <div class="rotateImage"></div>
+          <div class="rotateImage"><img src="./assets/DraftBeerSystem.JPG" alt="Draft beer system"></div>
+          <div class="rotateImage"><img src="./assets/Totemfotográfico.jpg" alt="Totem fotográfico"></div>
         </div>
         <div class="textoConteudo">
           <p>VENHA FAZER <span> PARTE</span> DESSA <span> HISTÓRIA</span></p>
