--- a/pages/Contato.html
+++ b/pages/Contato.html
@@ -8,29 +8,29 @@
       <link rel="preconnect" href="https://fonts.gstatic.com">
       <link href="https://fonts.googleapis.com/css2?family=Acme&family=Inconsolata:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
-      <link rel="shortcut icon" href="../../assets/wari_page_icon.png"> 
+      <link rel="shortcut icon" href="../assets/wari_page_icon.png"> 
       <link href="https://fonts.googleapis.com/css2?family=Fira+Sans+Condensed:wght@400;500;600&family=Fira+Sans:wght@300;400;500;700&display=swap" rel="stylesheet">
     </head>
   </head>
 <body>
   <header class="cabecalho">
-    <img class="banner" src="../../assets/party_wallpaper.png" alt="">
+    <img class="banner" src="../assets/party_wallpaper.png" alt="">
     <nav class="menu">
-      <img class="logoMenu" src="../../assets/wari_Logo.png" alt="">
+      <img class="logoMenu" src="../assets/wari_Logo.png" alt="">
       <a href="../index.html">HOME</a>
       <a href="../pages/Empresa.html">A WARI</a>
       <a href="../pages/Solucoes.html">SOLUÇÕES</a>
       <a href="../pages/Produtos.html">O PRODUTO</a>
       <a href="../pages/Depoimentos.html">CLIENTES</a>
       <a href="#">CONTATO</a>
-      <a class="facebookIcon" href="#"><img src="../../assets/Produtos/facebook_icon.png" alt=""></a>
-      <a class="instaIcon" href="#"><img src="../../assets/Produtos/insta_icon.png" alt=""></a>
+      <a class="facebookIcon" href="#"><img src="../assets/Produtos/facebook_icon.png" alt=""></a>
+      <a class="instaIcon" href="#"><img src="../assets/Produtos/insta_icon.png" alt=""></a>
     </nav>
    </header>
 <div class="orcamento">
   <div class="textoConteudo">
     <p class="titulo">CONTATO</p>
-    <img class="icon" src="../../assets/wari_icon.png" alt="">
+    <img class="icon" src="../assets/wari_icon.png" alt="">
   </div>
   <form action="">
     <input type="text" placeholder="Qual seu nome?">
@@ -43,7 +43,7 @@
   </form>
 </div>
 <div class="sobre">
-  <img class="logo" src="../../assets/wari_Logo.png" alt="logo">
+  <img class="logo" src="../assets/wari_Logo.png" alt="logo">
   <div class="textoSobre">
     <p>Home</p>
     <p>A wari</p>
@@ -57,8 +57,8 @@
     <p>Loja 112 (Segundo Andar) - São Pedro, Juiz de Fora/MG</p>
     <p>+55 (32) 3015-9727</p>
     <p><strong>Junte-se a nós</strong></p>
-    <a href="#"><img class="mediaIcon" src="../../assets/facebook_icon.png" alt="Facebook"></a>
-    <a href="#"><img class="mediaIcon" src="../../assets/instagram_icon.png" alt="Instagram"></a>
+    <a href="#"><img class="mediaIcon" src="../assets/facebook_icon.png" alt="Facebook"></a>
+    <a href="#"><img class="mediaIcon" src="../assets/instagram_icon.png" alt="Instagram"></a>
   </div>
 </div>
 </div>
